fix: fix the view on smaller screens

--- a/blocks/article/__header/_size/_large/article__header_size_large.css
+++ b/blocks/article/__header/_size/_large/article__header_size_large.css
@@ -3,5 +3,5 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.38;
-    max-width: 340px;
+    width: 340px;
 }
