--- a/blocks/central-section/central-section.css
+++ b/blocks/central-section/central-section.css
@@ -1,7 +1,8 @@
 .central-section {
-    max-width: 1170px;
+    width: 1170px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin: auto;
+    gap: 130px;
 }
