--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,5 +1,5 @@
 .content {
-    max-width: 1170px;
+    width: 1170px;
     padding-left: 10px;
     padding-right: 10px;
 }
