--- a/blocks/left-block/__header/left-block__header.css
+++ b/blocks/left-block/__header/left-block__header.css
@@ -6,6 +6,6 @@
     color: #171717;
     margin: 0;
     text-decoration: none;
-    max-width: 594px;
+    width: 594px;
     margin: 20px 0 15px 0;
 }
