--- a/blocks/left-block/__snippet/left-block__snippet.css
+++ b/blocks/left-block/__snippet/left-block__snippet.css
@@ -1,6 +1,6 @@
 .left-block__snippet {
     font-family: "PT Sans", "Arial", sans-serif;
-    max-width: 620px;
+    width: 620px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
