--- a/blocks/pagination/__pages/pagination__pages.css
+++ b/blocks/pagination/__pages/pagination__pages.css
@@ -2,7 +2,7 @@
     height: 40px;
     list-style: none;
     display: flex;
-    max-width: 1170px;
+    width: 1170px;
     padding: 0;
     margin: 0 auto;
 }
