--- a/blocks/sidebar-widget/__instagram/sidebar-widget__instagram.css
+++ b/blocks/sidebar-widget/__instagram/sidebar-widget__instagram.css
@@ -1,5 +1,5 @@
 .sidebar-widget__instagram {
     min-height: 516px;
-    max-width: 270px;
+    width: 270px;
     margin-bottom: 60px;
 }
